<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.appbar.MaterialToolBar
		android:id="@+id/tollbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_navigate_button"
        app:title="@string/titulo_criar_tarefa" />
		
	<androix.constraintlayout.widget.GuideLine
		android:id="@+id/guide_start"
		android:orientation="vertical"
		app:layout_constraintGuide_begin="32dp"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
		
	<androix.constraintlayout.widget.GuideLine
		android:id="@+id/guide_end"
		android:orientation="vertical"
		app:layout_constraintGuide_end="32dp"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
		
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_title"
		android:layout_width="0dp"
        android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutLinedBox"
		android:layout_marginTop="16dp"
		android:hint="@string/hint_titulo"
		app:layout_constraintStart_toStartOf="@id/guide_start"
		app:layout_constraintEnd_toEndOf="@id/guide_end"
		app:layout_constraintTop_toBottomOf="@id/tollbar" >
		
		<com.google.android.material.textfield.TextInputEditText
			android:inputType="text"
			android:layout_width="match_parent"
        	android:layout_height="wrap_content" />
			
	</com.google.android.material.textfield.TextInputLayout>
		
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_descrip"
		android:layout_width="0dp"
        android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutLinedBox"
		android:layout_marginTop="8dp"
		android:hint="@string/hint_descricao"
		app:layout_constraintStart_toStartOf="@id/guide_start"
		app:layout_constraintEnd_toEndOf="@id/guide_end"
		app:layout_constraintTop_toBottomOf="@id/til_title" >
		
		<com.google.android.material.textfield.TextInputEditText
			android:inputType="textMultiLine"
			android:layout_width="match_parent"
        	android:layout_height="200dp" />
			
	</com.google.android.material.textfield.TextInputLayout>
		
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_date"
		android:layout_width="0dp"
        android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutLinedBox"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="16dp"
		android:hint="@string/hint_data"
		app:startIconDrawable="@drawable/ic_calendar"
		app:layout_constraintStart_toStartOf="@id/guide_start"
		app:layout_constraintEnd_toStartOf="@id/til_hour"
		app:layout_constraintTop_toBottomOf="@id/til_descrip" >
		
		<com.google.android.material.textfield.TextInputEditText
			android:inputType="none"
			android:focusable="false"
			android:layout_width="match_parent"
        	android:layout_height="wrap_content" />
			
	</com.google.android.material.textfield.TextInputLayout>
		
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_hour"
		android:layout_width="0dp"
        android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutLinedBox"
		android:hint="@string/hint_hour"
		app:startIconDrawable="@drawable/ic_timer"
		app:layout_constraintStart_toEndOf="@id/til_date"
		app:layout_constraintEnd_toEndOf="@id/guide_end"
		app:layout_constraintTop_toTopOf="@id/til_date" >
		
		<com.google.android.material.textfield.TextInputEditText
			android:inputType="none"
			android:focusable="false"
			android:layout_width="match_parent"
        	android:layout_height="wrap_content" />
			
	</com.google.android.material.textfield.TextInputLayout>
		
	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_cancel"
		android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:text="@string/botao_cancelar"
		android:textAllCaps="false"
		style="@style/Widget.MaterialComponents.Button.OutLinedButton"
		app:layout_constraintStart_toStartOf="@id/guide_start"
		app:layout_constraintEnd_toEndOf="@id/guide_end"
		app:layout_constraintTop_toBottomOf="@id/btn_new_task" />
		
	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_new_task"
		android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:text="@string/botao_criar_tarefas"
		android:textAllCaps="false"
		style="@style/Widget.MaterialComponents.Button"
		app:layout_constraintStart_toStartOf="@id/guide_start"
		app:layout_constraintEnd_toEndOf="@id/guide_end"
		app:layout_constraintTop_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>